Update doc on List.head/tail

--- a/Type/List.pod
+++ b/Type/List.pod
@@ -341,37 +341,44 @@ Examples:
 
 Defined as:
 
-    multi method head(List:D: Int:D $number) returns Seq:D
+    multi method head(List:D: Int(Cool) $number = 1) returns Seq:D
 
 Usage:
 
+    LIST.head
     LIST.head(NUMBER)
 
 Returns the B<first> NUMBER items of the list.  Returns an empty list if
-NUMBER <= 0.
+NUMBER <= 0.  Defaults to the first element seen if no NUMBER specified.
 
 Examples:
 
     say ^10 .head(5)       # 0 1 2 3 4
     say ^Inf .head(5)      # 0 1 2 3 4
+    say ^10 .head          # 0
+    say ^Inf .head         # 0
 
 =head2 method tail
 
 Defined as:
 
-    multi method tail(List:D: Int:D $number) returns Seq:D
+    multi method tail(List:D: Int(Cool) $number = 1) returns Seq:D
 
 Usage:
 
+    LIST.tail
     LIST.tail(NUMBER)
 
 Returns the B<last> NUMBER items of the list.  Returns an empty list if
-NUMBER <= 0.  Throws an exception if the list is lazy.
+NUMBER <= 0.  Defaults to the last element seen if no NUMBER specified.
+Throws an exception if the list is lazy.
 
 Examples:
 
     say ^10 .tail(5)      # 5 6 7 8 9
     say ^Inf .tail(5)     # Cannot tail a lazy list
+    say ^10 .tail         # 9
+    say ^Inf .tail        # Cannot tail a lazy list
 
 =head2 routine classify
 
