Add doc stubs for Supply.head/tail

--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -330,6 +330,18 @@ Creates a new supply in which changes to the number of values seen are
 emitted.  It optionally also takes an interval (in seconds) if you only want
 to be updated every so many seconds.
 
+=head2 method head
+
+    method head(Supply:D: Int(Cool) $number = 1) returns Supply:D
+
+Creates a "head" supply with the same semantics as List.head.
+
+=head2 method tail
+
+    method tail(Supply:D: Int(Cool) $number = 1) returns Supply:D
+
+Creates a "tail" supply with the same semantics as List.tail.
+
 =head2 method rotor
 
     method rotor(Supply:D: @cycle) returns Supply:D
