mention sigilless variables and 'is raw' for binding

--- a/Language/containers.pod
+++ b/Language/containers.pod
@@ -123,6 +123,17 @@ changes the contents of the other.
 You've seen this situation before: it is exactly what happened with the
 signature parameter marked as C<is rw>.
 
+Sigilless variabes also bind by default and so do parameters with the trait C<is raw>.
+
+    my $a = 42;
+    my \b = $a;
+    b++;
+    say $a;         # 43
+
+    sub f($c is raw) { $c++ }
+    f($a);
+    say $a;         # 44
+
 =head2 Scalar containers and listy things
 
 There are a number of positional container types with slightly different
