--- a/Language/containers.pod
+++ b/Language/containers.pod
@@ -268,4 +268,30 @@ Methods generally don't care whether their invocant is in a scalar, so
 
 maps over a list of three elements, not of one.
 
+=head2 Custom containers
+
+To provide custom containers Perl 6 provides the class C<Proxy>. It takes two
+methods that are called when values are stored or fetched from the container.
+Type checks are not done by the container itself and other restrictions like
+readonlyness can be broken. The returned value must therefor be of the same
+type then the type of the variable it is bound to.
+
+    sub lucky($type = Any) {
+            my $c-value = $type.new; # closure variable, it's type defaults to Any
+            return Proxy.new(
+                    FETCH => method (){ $c-value},
+                    STORE => method ($new-value){
+                            X::OutOfRange.new(what => 'number', got => '13', range => '-Inf .. 12, 14..Inf').throw
+                                    if $new-value == 13;
+                            $c-value = $new-value;
+                    }
+            );
+    }
+    
+    my Int $a := lucky(Int);
+    say $a = 12;
+    say $a = Mu.new;  # fails with X::TypeCheck::Binding
+    say $a = 13;      # fails with X::OutOfRange.new
+
 =end pod
+
