type captures are much better when using Proxy

--- a/Language/containers.pod
+++ b/Language/containers.pod
@@ -274,13 +274,14 @@ To provide custom containers Perl 6 provides the class C<Proxy>. It takes two
 methods that are called when values are stored or fetched from the container.
 Type checks are not done by the container itself and other restrictions like
 readonlyness can be broken. The returned value must therefor be of the same
-type then the type of the variable it is bound to.
+type then the type of the variable it is bound to. We can use type captures to
+work with types in Perl 6.
 
-    sub lucky($type = Any) {
-            my $c-value = $type.new; # closure variable, it's type defaults to Any
+    sub lucky(::T $type) {
+            my T $c-value; # closure variable
             return Proxy.new(
                     FETCH => method (){ $c-value},
-                    STORE => method ($new-value){
+                    STORE => method (T $new-value){
                             X::OutOfRange.new(what => 'number', got => '13', range => '-Inf .. 12, 14..Inf').throw
                                     if $new-value == 13;
                             $c-value = $new-value;
@@ -290,8 +291,8 @@ type then the type of the variable it is bound to.
     
     my Int $a := lucky(Int);
     say $a = 12;
-    say $a = Mu.new;  # fails with X::TypeCheck::Binding
-    say $a = 13;      # fails with X::OutOfRange.new
+    say $a = 'FOO'; # X::TypeCheck::Binding
+    say $a = 13; # X::OutOfRange
 
 =end pod
 
