mention default in Exceptions

--- a/Language/exceptions.pod
+++ b/Language/exceptions.pod
@@ -54,6 +54,14 @@ A C<CATCH> block uses smart matching similarly to how C<given/when> smart
 matches on options, thus it is possible to catch various categories of
 exceptions and handle them appropriately inside a C<when> block.
 
+To handle all exceptions use a C<default> statement.
+
+   CATCH {
+        default { 
+            say .WHAT.perl, do given .backtrace[0] { .file, .line, .subname }
+        }
+   }
+
 =head2 Throwing exceptions
 
 One can also explicitly throw exceptions via the C<.throw> method on an
