mention &f.() form in Language/Syntax

--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -454,6 +454,9 @@ See L<functions|/language/functions>.
     foo;   # Invoke the function foo with no arguments
     foo(); # Invoke the function foo with no arguments
     &f();  # Invoke &f, which contains a function
+    &f.(); # Same as above, needed to make the following work
+    my @functions = ({say 1}, {say 2}, {say 3});
+    @functions>>.();
 
 =head1 Operators
 
