bad pasta in proto

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -184,11 +184,10 @@ C<proto> is a way to formally declare commonalities between C<multi>
 candidates. It acts as a wrapper that can validate but not modify
 arguments. Consider this basic example:
 
-    proto congratulate(Str $reason,Str $name) {*}
+    proto congratulate(Str $reason,Str $name,|) {*}
     multi congratulate($reason,$name) {
        say "Hooray for your $reason, $name";
     }
-    # ...
 
     congratulate('being a cool number',42);
 
