correct two typos

--- a/Language/classtut.pod
+++ b/Language/classtut.pod
@@ -274,10 +274,10 @@ example) will not repeat the task.
 Analogous to attributes methods can be private. Private methods are declared
 with a prefixed exclamation mark. They are called with C<self!> followed by the
 methods name. To call a private method of another class the calling class has
-to be trusted by the called class. A trust relationship is declaired with
+to be trusted by the called class. A trust relationship is declared with
 C<trusts> and the to be trusted class has to be declared already. Calling a
 private methods of another class requires an instance of that class and the
-fully quallified name of the method.  Trust also applies to accessor methods of
+fully qualified name of the method.  Trust also applies to accessor methods of
 private attributes.
 
     class B {...}
