mention dependencies on Perl 5 etc.

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -15,15 +15,20 @@ be used loosely and interchangeably.
 
 =head2 As a Perl 6 beginner what should I install?
 
-If you are a Linux or Mac user you probably want to download Rakudo Star and
-install via compilation (a simple process) the MoarVM version available from
-L<http://rakudo.org/downloads/star/|http://rakudo.org/downloads/star>.
+Linux or Mac users probably want to download Rakudo Star and
+install via compilation (a simple process) the MoarVM based version available
+from L<http://rakudo.org/downloads/star/|http://rakudo.org/downloads/star>.
+
+Compilation needs a C compiler and Perl 5 installed.
 
 Or there is an official rakudo star docker image at
 L<https://hub.docker.com/_/rakudo-star/>
 
 If you are a Windows 32 or 64 bit user then Rakudo Star binaries are also
 available at the rakudo site. You will need Windows Git to use panda.
+
+To use panda (see below) to install library modules you will need git and Perl
+5's Test::Harness.
 
 There should be Linux and Mac binaries available shortly from vendors and third
 parties. Although vendor versions may be outdated.
