--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -314,9 +314,10 @@ Prefixing a parameter with a vertical bar C<|> makes the parameter a
 L<C<Capture>>, using up all the remaining positional and named
 arguments.
 
-This is often used in L<C<proto> definitions|proto> (like C<proto foo (|) {*}>)
-to indicate that the routine's L<C<multi> definitions|multi> can have any
-L<type constraints|#Type_Constraints>.
+This is often used in C<proto> definitions (like C<proto foo (|) {*}>) to
+indicate that the routine's L<C<multi> definitions|multi> can have any L<type
+constraints|#Type_Constraints>. See L<proto|/language/functions#proto> for an
+example.
 
 =head2 X<Parameter Traits and Modifiers|trait,is copy;trait,is rw>
 
