Add basic info on qualified names, taken from S02

--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -231,6 +231,15 @@ variables:
     #   ^^^ type name
 
 
+=head2 Packages and Qualified Names
+
+Named entities, such as variables, constants, classes, modules, subs, etc, are
+part of a namespace. Nested parts of a name use C<::> to separate the
+heirarchy. Some examples:
+
+See the L<documentaton on modules|/language/modules> for more details.
+
+
 =head2 Literals
 
 A L<literal|https://en.wikipedia.org/wiki/Literal_%28computer_programming%29>
